Intiialize plugin